onboarding dynamic cataloguing
